# opengraphs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  OpenGraphs 2f3923bb92b780eaa38ccfecd55ce03b 2.md  README.md  bun.lockb  demo_train.py  golden-demo-path.md  hackday-brief.md  hackday-must-ship-vs-nice-to-have.md  main.py  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: opengraphs.rb
apps/tui/: bun.lockb  package.json
apps/tui/src/: index.ts
apps/tui/src/lib/: daemon.ts  mentions.ts
crates/og/: Cargo.toml
crates/og/src/: main.rs
crates/ogd/: Cargo.toml
crates/ogd/src/: lib.rs  main.rs
crates/ogtui/: Cargo.toml
crates/ogtui/src/: app.rs  main.rs  socket_client.rs  tfevents.rs  ui.rs
crates/ogtui/tests/: cli_smoke.rs
docs/: agent_workflow.puml  agent_workflow_squence.puml  release.md
npm/opengraphs/: README.md  package.json
opengraphs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: UI_PROMPT.md
python/agent-chat/: pyproject.toml
python/agent-chat/og_agent_chat/: __init__.py  agent.py  alerts.py  client.py  codebase.py  config.py  models.py  runtime.py  server.py
python/agent-chat/og_agent_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/agent-chat/tests/: test_agent.py  test_alerts.py  test_codebase.py  test_config_client.py  test_models.py  test_runtime.py  test_server.py  test_server_integration.py
runs/be4fe703-9006-42e0-bb75-13d934e36cf1/: events.out.tfevents.1771136406.therapeutic-tody-of-fragrance.12655.0
scripts/: install.sh  release-downloads.sh
(+6 files in other folders)
