[package]
name = "ogd"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
bytes = "1.11.1"
hyper = "1.8.1"
hyper-util = "0.1.20"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
trackio-rs = "0.1.0"
